# veche

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  README.md  package.yaml  release_build_docker.sh  stack.yaml
app/: DevelMain.hs  devel.hs  main.hs
config/: keter.yml  models.persistentmodels
docs/: COMPILING_MACOS_M1.md  escrow.md
oneshot/: escrow-award.hs  escrow-destroy.hs  escrow-setdomain.hs  fest.hs  nft-to-dvl.hs  oneshot.cabal  pay.hs  sellOffer.hs  setHomeDomain.hs  updateSigners.hs
src/: Application.hs  Foundation.hs  Model.hs  Settings.hs
src/Handler/: Home.hs  Profile.hs
src/Import/: NoFoundation.hs
src/Yesod/Auth/: Stellar.hs
stellar/: stellar.cabal
stellar-horizon/: stellar-horizon.cabal
stellar-horizon/Stellar/Horizon/: API.hs
stellar-horizon/exe/: Main.hs
stellar-horizon/lib/Stellar/: Simple.hs
stellar-horizon/lib/Stellar/Horizon/: API.hs  Client.hs  DTO.hs  Types.hs
stellar-horizon/lib/Stellar/Simple/: Types.hs
stellar/lib/: Stellar.hs
stellar/lib/Stellar/: Account.hs  Memo.hs  Transaction.hs  XDR.x
stellar/lib/Stellar/XDR/: Transaction.x
stellar/test/: Main.hs
templates/: profile.hamlet
test/: TestImport.hs
test/Auth/: StellarSpec.hs
test/Handler/: CommentSpec.hs  HomeSpec.hs  ProfileSpec.hs
veche/: .gitignore  README.md  deploy.sh  migration.sql  package.yaml  veche.cabal
veche-web/: .gitignore  README.md  deploy.sh  migration.sql  server-dev-front.sh  server-dev-full.sh  server-dev.sh  server.sh  veche.cabal
veche-web/config/: dev-settings.yml  escrow-corrections.yaml  keter.yaml  models.persistentmodels  routes.yesodroutes  settings.yml  test-settings.yml
veche-web/deploy/: keter-config.yaml  keter.service  veche-backup  veche.service
veche-web/messages/: en.msg  ja.msg  ru.msg
veche-web/src/: Api.hs  Application.hs  Authorization.hs  Form.hs  Foundation.hs  Genesis.hs  Import.hs  Model.hs  Pretty.hs  RPC.hs  Settings.hs
veche-web/src/Authentication/: MyMtlWalletBot.hs  Stellar.hs  Telegram.hs
veche-web/src/Database/Persist/: Extra.hs
veche-web/src/Foundation/: Base.hs
veche-web/src/Handler/: API.hs  About.hs  Admin.hs  Audit.hs  Comment.hs  Dashboard.hs  Forum.hs  Issue.hs  Pages.hs  Root.hs  Settings.hs  Stellar.hs  Telegram.hs  User.hs
veche-web/src/Import/: Exception.hs  Extra.hs  NoFoundation.hs
veche-web/src/Model/: Attachment.hs  Comment.hs  Escrow.hs  Event.hs  Forum.hs  Issue.hs  Notification.hs  Request.hs  StellarHolder.hs  StellarSigner.hs  Telegram.hs  Types.hs  User.hs  UserRole.hs  Verifier.hs  Vote.hs
veche-web/src/Telegram/: Auth.hs  AuthWidget.hs
veche-web/src/Templates/: Comment.hs  DefaultLayout.hs  Issue.hs  Navbar.hs  Stellar.hs  User.hs
veche-web/src/Types/: Comment.hs  Issue.hs
veche-web/src/Workers/: StellarUpdate.hs  Telegram.hs
veche-web/static/.well-known/: stellar.toml
veche-web/static/css/: common.css  fontawesome-all.css
veche-web/static/js/: common.js
veche-web/templates/: about.hamlet  comment.hamlet  dashboard.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  forum.hamlet  forums.hamlet  issue-request-table-row.hamlet  issue-request-table.hamlet  issue-table-row.hamlet  issue.hamlet  issue.julius  issue.lucius  issues.hamlet  poll.hamlet  user.hamlet  user.julius  user.lucius
veche-web/templates/admin/: escrow.hamlet  events.hamlet
veche-web/templates/auth/: stellar-keybase.hamlet  stellar-laboratory.hamlet
veche-web/templates/pages/: escrow.hamlet
veche-web/test/: ApiSpec.hs  TestImport.hs
veche-web/test/Auth/: StellarSpec.hs
veche-web/test/Handler/: IssueSpec.hs  StellarSpec.hs  UserSpec.hs
veche-web/test/Model/: EventSpec.hs  NotificationSpec.hs  VoteSpec.hs
veche/config/: keter.yaml  models.persistentmodels  routes.yesodroutes  settings.yml  test-settings.yml
veche/deploy/: keter-config.yaml  keter.service  veche-backup
veche/src/: Application.hs  Authorization.hs  Form.hs  Foundation.hs  Import.hs  Issue.hs  Model.hs  Settings.hs  Types.hs  User.hs
veche/src/Database/Persist/: Extra.hs
veche/src/Handler/: API.hs  Admin.hs  Comment.hs  Common.hs  Dashboard.hs  Issue.hs  Topic.hs  User.hs
veche/src/Import/: NoFoundation.hs
veche/src/Model/: Comment.hs  Issue.hs  Request.hs  StellarSigner.hs  Types.hs  User.hs  Vote.hs
veche/src/Templates/: Comment.hs  Issue.hs  User.hs
veche/src/Types/: Comment.hs
veche/src/Workers/: StellarUpdate.hs
veche/src/Yesod/Auth/: Stellar.hs  verify.py
veche/static/css/: bootstrap.css  common.css
veche/templates/: comment.hamlet  comment.lucius  dashboard.hamlet  default-layout.hamlet  issue-edit.hamlet  issue-new.hamlet  issue-table-row.hamlet  issue-table.hamlet  issue.hamlet  issue.julius  issues.hamlet  profile.hamlet  topic-edit.hamlet  topic-new.hamlet  topic.hamlet  topic.julius  topics-new.hamlet  topics.hamlet  user.hamlet  user.julius
veche/test/: TestImport.hs  sign.py
veche/test/Auth/: StellarSpec.hs
veche/test/Handler/: UserSpec.hs
withcallstack/: WithCallStack.hs  withcallstack.cabal
yesod-auth-stellar/: yesod-auth-stellar.cabal
yesod-auth-stellar/Yesod/Auth/: Stellar.hs  challenge.py  verify.py
yesod-auth-stellar/Yesod/Auth/Stellar/: Internal.hs
yesod-form-bootstrap5/: yesod-form-bootstrap5.cabal
yesod-form-bootstrap5/Yesod/Form/: Bootstrap5.hs
