cabal-version: 2.2
name:          oneshot
version:       0.1
build-type:    Simple

common common
  build-depends:
    , base
    , named
    , stellar-horizon
    , text

  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    ImportQualifiedPost
    NamedFieldPuns
    NumDecimals
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables

  default-language:   Haskell2010

executable escrow-award
  import:  common
  main-is: escrow-award.hs

executable sellOffer
  import:        common
  build-depends:
    , http-client
    , http-types
    , servant-client
    , time
    , withcallstack

  main-is:       sellOffer.hs

executable setHomeDomain
  import:  common
  main-is: setHomeDomain.hs

executable updateSigners
  import:        common
  build-depends:
    , containers
    , pretty-simple

  main-is:       updateSigners.hs
