cabal-version: 3.4
name:          oneshot
version:       0.1
build-type:    Simple

common common
  build-depends:
    , base
    , named
    , stellar-horizon
    , text

  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    ImportQualifiedPost
    NamedFieldPuns
    NumDecimals
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables

  default-language:   GHC2021

executable escrow-award
  import:  common
  main-is: escrow-award.hs

executable fest
  import:        common
  build-depends:
    , containers
    , time

  main-is:       fest.hs

executable nft-to-dvl
  import:  common
  main-is: nft-to-dvl.hs

executable pay
  import:        common
  build-depends: time
  main-is:       pay.hs

executable sellOffer
  import:        common
  build-depends:
    , http-client
    , time

  main-is:       sellOffer.hs

executable setHomeDomain
  import:  common
  main-is: setHomeDomain.hs

executable updateSigners
  import:        common
  build-depends:
    , containers
    , pretty-simple

  main-is:       updateSigners.hs
