cabal-version: >=1.10
name:          stellar-horizon
version:       0
build-type:    Simple

library
  build-depends:
      aeson
    , base
    , http-media
    , servant
    , servant-client
    , text

  default-language: Haskell2010
  exposed-modules:
    Stellar.Horizon.API
    Stellar.Horizon.Client
    Stellar.Horizon.Types
