cabal-version: >=1.10
name:          stellar-horizon
version:       0
build-type:    Simple

library
  build-depends:
      aeson
    , base
    , http-media
    , servant
    , servant-client
    , servant-docs
    , text

  default-language: Haskell2010
  exposed-modules:
    Stellar.Horizon.API
    Stellar.Horizon.Client
    Stellar.Horizon.Types

  hs-source-dirs:   lib

executable horizon
  build-depends:
      base
    , http-client-tls
    , pretty-simple
    , servant-cli
    , servant-client

  -- package
  build-depends:    stellar-horizon
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
