cabal-version: 3.4
name:          stellar-horizon
version:       0
build-type:    Simple

library
  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , ed25519
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , named
    , path-pieces
    , scientific
    , servant
    , servant-client
    , servant-docs
    , stellar-sdk
    , text
    , time
    , withcallstack

  default-language: GHC2021
  exposed-modules:
    Stellar.Horizon.API
    Stellar.Horizon.Client
    Stellar.Horizon.DTO
    Stellar.Simple
    Stellar.Simple.Types

  hs-source-dirs:   lib

executable horizon
  -- TODO:
  buildable:        False

  -- global
  build-depends:
    , base
    , http-client-tls
    , pretty-simple
    , servant-cli
    , servant-client

  -- package
  build-depends:    stellar-horizon
  default-language: GHC2021
  hs-source-dirs:   exe
  main-is:          Main.hs
