cabal-version: 2.2
name:          stellar
version:       0
build-type:    Simple

library
  build-depends:
    , base
    , bytestring
    , ONC-RPC

  default-language: Haskell2010
  exposed-modules:
    Stellar
    Stellar.Account
    Stellar.Memo
    Stellar.Transaction

  hs-source-dirs:   lib

test-suite test
  build-depends:
    , base
    , bytestring
    , tasty
    , tasty-hunit

  -- package dependencies
  build-depends:  stellar
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
