cabal-version: 2.2
name:          stellar
version:       0
build-type:    Custom

custom-setup
  setup-depends:
    , base
    , Cabal
    , ONC-RPC

library
  build-depends:
    , base
    , bytestring
    , ONC-RPC

  default-language: Haskell2010
  exposed-modules:
    Stellar
    Stellar.Account
    Stellar.Memo
    Stellar.Transaction

  hs-source-dirs:   lib
  other-modules:    Stellar.XDR

test-suite test
  build-depends:
    , base
    , bytestring
    , tasty
    , tasty-hunit

  -- package dependencies
  build-depends:    stellar
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
