cabal-version: 3.4
name:          veche
version:       2022.27

library
  default-extensions:
    EmptyCase
    NamedFieldPuns

  exposed-modules:
    Api
    Application
    Authentication.MyMtlWalletBot
    Authentication.Stellar
    Authentication.Telegram
    Authorization
    Database.Persist.Extra
    Form
    Foundation
    Foundation.Base
    Genesis
    Handler.About
    Handler.Admin
    Handler.API
    Handler.Audit
    Handler.Comment
    Handler.Common
    Handler.Dashboard
    Handler.Forum
    Handler.Issue
    Handler.Pages
    Handler.Root
    Handler.Settings
    Handler.Stellar
    Handler.Telegram
    Handler.User
    Import
    Import.Extra
    Import.NoFoundation
    Model
    Model.Attachment
    Model.Comment
    Model.Escrow
    Model.Event
    Model.Forum
    Model.Issue
    Model.Request
    Model.StellarHolder
    Model.StellarSigner
    Model.Telegram
    Model.Types
    Model.User
    Model.UserRole
    Model.Verifier
    Model.Vote
    Paths_veche
    RPC
    Settings
    Settings.StaticFiles
    Telegram.Auth
    Templates.Comment
    Templates.DefaultLayout
    Templates.Issue
    Templates.Stellar
    Templates.User
    Workers.StellarUpdate
    Workers.Telegram

  hs-source-dirs:     src
  build-depends:
    , aeson
    , base                       >=4.9.1.0 && <5
    , base16-bytestring
    , base64-bytestring
    , blaze-html
    , bytestring
    , case-insensitive
    , classy-prelude
    , cmark-gfm
    , containers
    , cryptohash-sha256
    , data-default
    , esqueleto
    , fast-logger
    , file-embed
    , hjsmin                     >=0.1     && <0.3
    , http-api-data
    , http-client
    , http-client-tls            >=0.3     && <0.4
    , http-types
    , insert-ordered-containers
    , lens
    , monad-logger               >=0.3     && <0.4
    , mtl
    , nonce
    , openapi3
    , path-pieces
    , persistent
    , persistent-sqlite
    , random
    , scientific
    , servant
    , servant-client
    , servant-openapi3
    , servant-server
    , servant-swagger-ui
    , shakespeare                >=2.0     && <2.1
    , stellar-sdk
    , telegram-api
    , template-haskell
    , text                       >=0.11    && <2.0
    , time
    , unliftio
    , wai
    , wai-extra
    , warp                       >=3.0     && <3.4
    , withcallstack
    , yaml                       >=0.11    && <0.12
    , yesod                      >=1.6     && <1.7
    , yesod-auth                 >=1.6     && <1.7
    , yesod-core                 >=1.6     && <1.7
    , yesod-form                 >=1.7.3
    , yesod-persistent
    , yesod-static               >=1.6     && <1.7

  -- project
  build-depends:
    , stellar-horizon
    , yesod-form-bootstrap5

  default-language:   GHC2021

executable veche
  main-is:        main.hs
  other-modules:  DevelMain
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base           >=4.9.1.0 && <5
    , foreign-store
    , warp           >=3.0     && <3.4

  -- package
  build-depends:  veche

test-suite veche-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    ApiSpec
    Auth.StellarSpec
    Handler.CommonSpec
    Handler.IssueSpec
    Handler.StellarSpec
    Handler.UserSpec
    Model.EventSpec
    Model.VoteSpec
    TestImport

  hs-source-dirs: test
  ghc-options:    -Wall
  build-depends:
    , aeson
    , base               >=4.9.1.0 && <5
    , base64-bytestring
    , blaze-html
    , bytestring
    , classy-prelude     >=1.5     && <1.6
    , hedgehog
    , hspec              >=2.0.0
    , HUnit
    , microlens
    , monad-logger       >=0.3     && <0.4
    , mtl
    , persistent
    , persistent-sqlite
    , servant-server
    , stellar-sdk
    , text               >=0.11    && <2.0
    , veche
    , wai
    , wai-extra
    , warp
    , xml-conduit
    , yesod              >=1.6     && <1.7
    , yesod-auth         >=1.6     && <1.7
    , yesod-core         >=1.6     && <1.7
    , yesod-persistent
    , yesod-static
    , yesod-test

  -- project
  build-depends:  stellar-horizon
