cabal-version: 1.12
name:          veche
version:       0
build-type:    Simple

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual:      False
  default:     False

flag library-only
  description: Build for use with "yesod devel"
  manual:      False
  default:     False

library
  exposed-modules:
    Application
    Foundation
    Handler.Comment
    Handler.Common
    Handler.Profile
    Handler.Topic
    Import
    Import.NoFoundation
    Model
    Settings
    Settings.StaticFiles
    Yesod.Auth.Stellar

  hs-source-dirs:   src
  build-depends:
      aeson
    , base                    >=4.9.1.0 && <5
    , blaze-html
    , bytestring              >=0.10    && <0.11
    , case-insensitive
    , classy-prelude          >=1.5     && <1.6
    , classy-prelude-conduit  >=1.5     && <1.6
    , classy-prelude-yesod
    , conduit                 >=1.0     && <2.0
    , containers
    , data-default
    , directory               >=1.1     && <1.4
    , fast-logger             >=2.2     && <3.1
    , file-embed
    , foreign-store
    , hjsmin                  >=0.1     && <0.3
    , http-client-tls         >=0.3     && <0.4
    , http-conduit            >=2.3     && <2.4
    , monad-control           >=0.3     && <1.1
    , monad-logger            >=0.3     && <0.4
    , persistent
    , persistent-sqlite
    , persistent-template
    , safe
    , shakespeare             >=2.0     && <2.1
    , template-haskell
    , text                    >=0.11    && <2.0
    , time
    , typed-process
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , wai-logger              >=2.2     && <2.4
    , warp                    >=3.0     && <3.4
    , yaml                    >=0.11    && <0.12
    , yesod                   >=1.6     && <1.7
    , yesod-auth              >=1.6     && <1.7
    , yesod-core              >=1.6     && <1.7
    , yesod-form              >=1.6     && <1.7
    , yesod-static            >=1.6     && <1.7

  if (flag(dev) || flag(library-only))
    ghc-options: -Wall -fwarn-tabs -O0
    cpp-options: -DDEVELOPMENT

  else
    ghc-options: -Wall -fwarn-tabs -O2

  default-language: Haskell2010

executable veche
  main-is:          main.hs
  other-modules:    DevelMain
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base                    >=4.9.1.0 && <5
    , bytestring              >=0.10    && <0.11
    , case-insensitive
    , classy-prelude          >=1.5     && <1.6
    , classy-prelude-conduit  >=1.5     && <1.6
    , classy-prelude-yesod
    , conduit                 >=1.0     && <2.0
    , containers
    , data-default
    , directory               >=1.1     && <1.4
    , fast-logger             >=2.2     && <3.1
    , file-embed
    , foreign-store
    , hjsmin                  >=0.1     && <0.3
    , http-client-tls         >=0.3     && <0.4
    , http-conduit            >=2.3     && <2.4
    , monad-control           >=0.3     && <1.1
    , monad-logger            >=0.3     && <0.4
    , persistent
    , persistent-sqlite
    , persistent-template
    , safe
    , shakespeare             >=2.0     && <2.1
    , template-haskell
    , text                    >=0.11    && <2.0
    , time
    , typed-process
    , unordered-containers
    , veche
    , vector
    , wai
    , wai-extra
    , wai-logger              >=2.2     && <2.4
    , warp                    >=3.0     && <3.4
    , yaml                    >=0.11    && <0.12
    , yesod                   >=1.6     && <1.7
    , yesod-auth              >=1.6     && <1.7
    , yesod-core              >=1.6     && <1.7
    , yesod-form              >=1.6     && <1.7
    , yesod-static            >=1.6     && <1.7

  if flag(library-only)
    buildable: False

  default-language: Haskell2010

test-suite veche-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Auth.StellarSpec
    Handler.CommonSpec
    Handler.ProfileSpec
    TestImport

  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:
      aeson
    , base                    >=4.9.1.0 && <5
    , bytestring              >=0.10    && <0.11
    , case-insensitive
    , classy-prelude          >=1.5     && <1.6
    , classy-prelude-conduit  >=1.5     && <1.6
    , classy-prelude-yesod
    , conduit                 >=1.0     && <2.0
    , containers
    , data-default
    , directory               >=1.1     && <1.4
    , fast-logger             >=2.2     && <3.1
    , file-embed
    , foreign-store
    , hjsmin                  >=0.1     && <0.3
    , hspec                   >=2.0.0
    , http-client-tls         >=0.3     && <0.4
    , http-conduit            >=2.3     && <2.4
    , microlens
    , monad-control           >=0.3     && <1.1
    , monad-logger            >=0.3     && <0.4
    , persistent
    , persistent-sqlite
    , persistent-template
    , safe
    , shakespeare             >=2.0     && <2.1
    , template-haskell
    , text                    >=0.11    && <2.0
    , time
    , typed-process
    , unordered-containers
    , veche
    , vector
    , wai
    , wai-extra
    , wai-logger              >=2.2     && <2.4
    , warp                    >=3.0     && <3.4
    , yaml                    >=0.11    && <0.12
    , yesod                   >=1.6     && <1.7
    , yesod-auth              >=1.6     && <1.7
    , yesod-core              >=1.6     && <1.7
    , yesod-form              >=1.6     && <1.7
    , yesod-static            >=1.6     && <1.7
    , yesod-test

  default-language: Haskell2010
