cabal-version: 1.12
name:          veche
version:       0
build-type:    Simple

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual:      False
  default:     False

library
  default-extensions: EmptyCase
  exposed-modules:
    Application
    Authorization
    Form
    Foundation
    Genesis
    Handler.Comment
    Handler.Common
    Handler.Dashboard
    Handler.Issue
    Handler.User
    Import
    Import.NoFoundation
    Model
    Settings
    Settings.StaticFiles
    Templates.Comment
    Templates.Issue
    Templates.User
    Types
    Types.Comment
    Types.Issue
    Workers.StellarUpdate

  hs-source-dirs:     src
  build-depends:
      aeson
    , base                  >=4.9.1.0 && <5
    , blaze-html
    , bytestring            >=0.10    && <0.11
    , case-insensitive
    , classy-prelude        >=1.5     && <1.6
    , classy-prelude-yesod
    , conduit               >=1.0     && <2.0
    , containers
    , fast-logger           >=2.2     && <3.1
    , file-embed
    , hjsmin                >=0.1     && <0.3
    , http-client-tls       >=0.3     && <0.4
    , monad-logger          >=0.3     && <0.4
    , persistent
    , persistent-sqlite
    , persistent-template
    , random
    , servant-client
    , shakespeare           >=2.0     && <2.1
    , template-haskell
    , text                  >=0.11    && <2.0
    , time
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , wai-logger            >=2.2     && <2.4
    , warp                  >=3.0     && <3.4
    , yaml                  >=0.11    && <0.12
    , yesod                 >=1.6     && <1.7
    , yesod-auth            >=1.6     && <1.7
    , yesod-core            >=1.6     && <1.7
    , yesod-form            >=1.6     && <1.7
    , yesod-static          >=1.6     && <1.7

  -- project
  build-depends:
      stellar-horizon
    , yesod-auth-stellar

  if flag(dev)
    ghc-options: -Wall -fwarn-tabs -O0
    cpp-options: -DDEVELOPMENT

  else
    ghc-options: -Wall -fwarn-tabs -O2

  default-language:   Haskell2010

executable veche
  main-is:          main.hs
  other-modules:    DevelMain
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base           >=4.9.1.0 && <5
    , foreign-store
    , warp           >=3.0     && <3.4

  -- package
  build-depends:    veche
  default-language: Haskell2010

test-suite veche-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Auth.StellarSpec
    Handler.CommonSpec
    Handler.UserSpec
    TestImport

  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:
      base                  >=4.9.1.0 && <5
    , bytestring            >=0.10    && <0.11
    , classy-prelude        >=1.5     && <1.6
    , containers
    , hspec                 >=2.0.0
    , microlens
    , monad-logger          >=0.3     && <0.4
    , mtl
    , persistent
    , persistent-sqlite
    , servant-server
    , shakespeare
    , text                  >=0.11    && <2.0
    , time
    , unordered-containers
    , veche
    , vector
    , wai
    , warp
    , xml-conduit
    , yaml                  >=0.11    && <0.12
    , yesod                 >=1.6     && <1.7
    , yesod-auth            >=1.6     && <1.7
    , yesod-core            >=1.6     && <1.7
    , yesod-test

  -- project
  build-depends:
      stellar-horizon
    , yesod-auth-stellar

  default-language: Haskell2010
