cabal-version: >=1.10
name:          yesod-auth-stellar
version:       0
build-type:    Simple

library
  build-depends:
      base
    , base64-bytestring
    , ed25519
    , http-client-tls
    , http-types
    , nonce
    , servant-client
    , shakespeare
    , stellar-sdk
    , text
    , typed-process
    , yesod-auth
    , yesod-core
    , yesod-form

  -- project
  build-depends:    stellar-horizon
  default-language: Haskell2010
  exposed-modules:
    Yesod.Auth.Stellar
    Yesod.Auth.Stellar.Internal
