cabal-version: >=1.10
name:          yesod-auth-stellar
version:       0
build-type:    Simple

library
  build-depends:
      base
    , base64-bytestring
    , bytestring
    , ed25519
    , http-client-tls
    , http-types
    , network-uri
    , nonce
    , servant-client
    , stellar-sdk
    , text
    , yesod-auth
    , yesod-core
    , yesod-form

  -- project
  build-depends:    stellar-horizon
  default-language: Haskell2010
  exposed-modules:  Yesod.Auth.Stellar
  other-modules:    Yesod.Auth.Stellar.Internal
