cabal-version: >=1.10
name:          yesod-auth-stellar
version:       0
build-type:    Simple

library
  build-depends:
      base
    , base64
    , http-client-tls
    , http-types
    , network-uri
    , servant-client
    , stellar-sdk
    , text
    , yesod-auth
    , yesod-core
    , yesod-form

  -- project
  build-depends:
      stellar-horizon
    , yesod-form-bootstrap5

  default-language: Haskell2010
  exposed-modules:  Yesod.Auth.Stellar
